--- a/backend/package.json
+++ b/backend/package.json
@@ -13,5 +13,16 @@
     "pino": "^9.6.0",
     "typescript": "^5.8.2",
     "zod": "^3.24.2"
-  }
+  },
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
