--- a/backend/package.json
+++ b/backend/package.json
@@ -13,5 +13,8 @@
     "pino": "^9.6.0",
     "typescript": "^5.8.2",
     "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "@types/node": "^22.13.10"
   }
 }
