--- a/backend/package.json
+++ b/backend/package.json
@@ -18,10 +18,6 @@
     "typescript": "^5.8.2",
     "zod": "^3.24.2"
   },
-<<<<<<< HEAD
-  "devDependencies": {
-    "@types/node": "^22.13.10"
-=======
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
@@ -33,7 +29,11 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^22.14.0",
+    "@types/nodemailer": "^6.4.17",
     "prettier": "^3.5.3"
->>>>>>> 563514e03e7888f8d3572924c0194673e96dd1e1
   }
 }
